--- a/contact.html
+++ b/contact.html
@@ -45,11 +45,11 @@
                 <form>
                     <div class="form-group">
                       <label for="exampleInputEmail1">Name</label>
-                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                      <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder='John Smith'>
                     </div>
                     <div class="form-group">
                       <label for="exampleInputPassword1">E-mail Address</label>
-                      <input type="password" class="form-control" id="exampleInputPassword1">
+                      <input type="email" class="form-control" id="exampleInputPassword1" placeholder='example@gmail.com'>
                     </div>
                     <div class="form-group">
                         <label for="exampleFormControlTextarea1">Message</label>
