--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 <body>
     <div class="bg">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand p-4 m-n2 text-white" href="#">Dane Burns</a>
+            <a class="navbar-brand p-4 mb-n2 ml-5 text-white" href="#">Dane Burns</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
