--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 <body>
     <div class="bg">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand p-4 mb-n2 ml-5 text-white" href="#">Dane Burns</a>
+            <a class="navbar-brand p-4 mt-n2 mb-n2 ml-5 text-white" href="#">Dane Burns</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -59,25 +59,26 @@
                     </form>
                 </div>
             </div>
-        </div>
         
-    </div>
-    <div class="d-flex flex-column">
-        <div id="page-content">
-          <div class="container text-center">
-            <div class="row justify-content-center">
-              <div class="col-md-7">
-                <p class="lead text-white-50"><br></p>
-              </div>
+        
+    <div class="d-flex flex-column"> 
+      <div id="page-content">
+        <div class="container text-center">
+          <div class="row justify-content-center">
+            <div class="col-md-7">
+              <p class="lead text-white-50"> <br> </p>
             </div>
           </div>
         </div>
-        <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
-          <div class="container text-center">
-            <small>Copyright &copy;</small>
-          </div>
+      </div>
+      <div id='footerdiv'><br></div>
+      <footer id="sticky-footer" class="py-4 bg-dark text-white-50">  
+        <div class="container text-center">
+          <small>Copyright &copy;</small>
         </div>
-        </footer>
+      </div>
+      </footer>
+    </div>
 </body>
 
 
