--- a/index.html
+++ b/index.html
@@ -71,23 +71,26 @@
             </div>
         </div>
         
-    </div>
-    <div class="d-flex flex-column">
+   
+     <div class="d-flex flex-column"> 
         <div id="page-content">
           <div class="container text-center">
             <div class="row justify-content-center">
               <div class="col-md-7">
-                <p class="lead text-white-50"><br></p>
+                <p class="lead text-white-50"> <br> </p>
               </div>
             </div>
           </div>
         </div>
-        <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+        <div id='footerdiv'><br></div>
+        <footer id="sticky-footer" class="py-4 bg-dark text-white-50">  
           <div class="container text-center">
             <small>Copyright &copy;</small>
           </div>
         </div>
         </footer>
+        
+    </div>
 </body>
 
 
