--- a/portfolio.html
+++ b/portfolio.html
@@ -46,21 +46,21 @@
                     <div class="row">
                         <div class='col-4'>
                             <div class="holder">
-                                <img src='https://placehold.it/150/150' class='img-fluid'>
+                                <img src='./assets/grocerease.png' class='img-fluid border'>
                                 <div class='caption'>
-                                    <p>test</p>
+                                    <a href='https://lorddominic.github.io/grocerEASE/'>grocerEASE</a>
                                 </div>
                             </div>
                         </div>
                         <div class='col-4'>
                             <div class="holder">
-                                <img src='https://placehold.it/150/150' class='img-fluid'>
+                                <img src='./assets/weatherdash.png' class='img-fluid border'>
                                 <div class='caption'>
-                                    <p>test</p>
+                                    <a href='https://github.com/daneburns/weather_dashboard'>Weather Dashboard</a>
                                 </div>
                             </div>
                         </div>
-                        <div class='col-4'>
+                        <div class='col-4 mt-4'>
                             <div class="holder">
                                 </div>
                             </div>
@@ -118,6 +118,9 @@
         </footer>
     </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
 
 </html>
